--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,16 @@
 
     <groupId>cat.altimiras</groupId>
     <artifactId>shepherd</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
