--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,31 @@
 	<artifactId>shepherd</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 
-	<dependencies>
+	<description>Group elements according "live" rules executed asynchronously or on sliding or tumbling time windows</description>
+	<url>https://github.com/faltimiras/Shepherd/</url>
 
+	<developers>
+		<developer>
+			<name>Ferran Altimiras</name>
+			<email>ferran@altimiras.cat</email>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>scm:git:git://github.com/faltimiras/Shepherd.git</connection>
+		<developerConnection>scm:git:ssh://github.com:faltimiras/Shepherd.git</developerConnection>
+		<url>https://github.com/faltimiras/Shepherd/tree/master</url>
+	</scm>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -63,6 +86,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
