--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
 	<groupId>cat.altimiras</groupId>
 	<artifactId>shepherd</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 
-	<description>Group elements according "live" rules executed asynchronously or on sliding or tumbling time windows</description>
+	<description>Group elements according streaming rules executed asynchronously or on sliding or tumbling time windows</description>
 	<url>https://github.com/faltimiras/Shepherd/</url>
 
 	<developers>
